--- a/test.properties
+++ b/test.properties
@@ -1,3 +1,8 @@
 #test
-blup=blip
-blap= dumm\ndummm
+blup=blip # est123 # 12341
+blap= dumm\ndummm # blup
+
+#XFLD, 4: hallo test2
+test=12345 # 123
+#XBUT, 4: hallo test
+test=123
