wip i18nfile class

--- a/test.properties
+++ b/test.properties
@@ -1,7 +1,16 @@
 #test
 blup=blip # est123 # 12341
-blap= dumm\ndummm # blup
+blap=dumm\ndummm # blup
 
 
 #XBUT, 4: hallo test
 test=123
+
+#YEXP: dies ist eine beschreibung {0} mit parameters {1}
+buttonText_hallo=Dies ist eine beschreibung
+
+#zupa: dies ist eine beschreibung {0} mit parameters {1}
+buttonText_hallo=Dies ist eine beschreibung
+
+
+mySuperButton=hallo_wei tehgt es dir Mathäus
