--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "types": "libs/types/index.d.ts",
   "license": "ISC",
   "dependencies": {
     "nearley": "^2.18.0"
