--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}\\index.js"
-        }
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Launch Program",
+        "program": "${workspaceFolder}/out/index.js",
+        "preLaunchTask": "npm: compile",
+        "outFiles": [
+            "${workspaceFolder}/out/**/*.js"
+        ],
+    }
     ]
 }
