--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "rm -r out && tsc -p ./",
+    "watch": "tsc -watch -p ./"
   },
   "author": "",
-  "types": "libs/types/index.d.ts",
   "license": "ISC",
   "dependencies": {
     "nearley": "^2.18.0"
+  },
+  "devDependencies": {
+    "@types/nearley": "^2.11.0",
+    "@types/node": "^12.7.5",
+    "typescript": "^3.6.3",
+    "tslint": "^5.20.0"
   }
 }
