--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "i18nparser",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
-  "main": "index.js",
+  "main": "./out/index.js",
   "scripts": {
     "compile": "rm -r out && tsc -p ./",
     "watch": "tsc -watch -p ./"
   },
-  "author": "",
+  "author": "majany",
   "license": "ISC",
   "dependencies": {
     "nearley": "^2.18.0"
@@ -17,5 +17,10 @@
     "@types/node": "^12.7.5",
     "typescript": "^3.6.3",
     "tslint": "^5.20.0"
-  }
+  },
+  "typings": "./out/index.d.ts",
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/majany/i18nparser.git"
+	}
 }
