--- a/test.properties
+++ b/test.properties
@@ -10,3 +10,5 @@ test=123
 buttonText_hallo=Dies ist eine beschreibung
 
 mySuperButton=hallo_wei tehgt es dir Mathäus
+mySuperButton=hallo_wei tehgt es dir Mathäus
+mySuperButton=hallo_wei tehgt es dir Mathäus
