Allow '|' in i18n key names + save error when parsing definition

--- a/test.properties
+++ b/test.properties
@@ -9,6 +9,11 @@ test=123
 #YEXP: dies ist eine beschreibung {0} mit parameters {1}
 buttonText_hallo=Dies ist eine beschreibung
 
+#XYZ: das ist ein test
+buttonTest=Ein test
+
+button|test|C_something|blup=123
+
 mySuperButton=hallo_wei tehgt es dir Mathäus
 mySuperButton=hallo_wei tehgt es dir Mathäus
 mySuperButton=hallo_wei tehgt es dir Mathäus
