added . and - to allowed key characters

--- a/test.properties
+++ b/test.properties
@@ -14,6 +14,8 @@ buttonTest=Ein test
 
 button|test|C_something|blup=123
 
+butonText=123
+
 mySuperButton=hallo_wei tehgt es dir Mathäus
 mySuperButton=hallo_wei tehgt es dir Mathäus
 mySuperButton=hallo_wei tehgt es dir Mathäus
