line by line parsing

--- a/test.properties
+++ b/test.properties
@@ -19,3 +19,5 @@ butonText=123
 mySuperButton=hallo_wei tehgt es dir Mathäus
 mySuperButton=hallo_wei tehgt es dir Mathäus
 mySuperButton=hallo_wei tehgt es dir Mathäus
+
+hallo= 123
