--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,19 @@
         "outFiles": [
             "${workspaceFolder}/out/**/*.js"
         ],
-    }
+    },
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Jasmine Current File",
+        "program": "${workspaceFolder}/node_modules/jasmine/bin/jasmine",
+        "args": [
+          "${workspaceFolder}/out/spec/${fileBasenameNoExtension}.js"
+        ],
+        "preLaunchTask": "npm: compile",     
+        "outFiles": ["${workspaceFolder}/TSOutput/**/*.js"],
+        "console": "integratedTerminal",
+        "internalConsoleOptions": "neverOpen"
+  }
     ]
 }
