--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "./out/index.js",
   "scripts": {
     "compile": "rm -r out && tsc -p ./ && cp src/index.d.ts out",
-    "watch": "tsc -watch -p ./"
+    "watch": "tsc -watch -p ./",
+    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json"
   },
   "author": "majany",
   "license": "ISC",
   "dependencies": {
-    "nearley": "^2.18.0"
+    "nearley": "^2.18.0",
+    "only": "0.0.2"
   },
   "devDependencies": {
+    "ts-node": "^8.4.1",
+    "@types/jasmine": "^3.4.2",
+    "jasmine": "^3.5.0",
     "@types/nearley": "^2.11.0",
     "@types/node": "^12.7.5",
     "typescript": "^3.6.3",
@@ -20,7 +25,7 @@
   },
   "typings": "./out/index.d.ts",
   "repository": {
-		"type": "git",
-		"url": "https://github.com/majany/i18nparser.git"
-	}
+    "type": "git",
+    "url": "https://github.com/majany/i18nparser.git"
+  }
 }
