added coverage command

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "compile": "rm -r out && tsc -p ./ && cp src/index.d.ts out",
     "watch": "tsc -watch -p ./",
-    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json"
+    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
+    "coverage": "nyc -r html -r text -e .ts -x \"src/spec/*.ts\" -x \"src/libs/*\" npm run test"
   },
   "author": "majany",
   "license": "ISC",
   "dependencies": {
     "nearley": "^2.18.0",
+    "nyc": "^14.1.1",
     "only": "0.0.2"
   },
   "devDependencies": {
