--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
     {
         "type": "node",
         "request": "launch",
@@ -20,7 +21,7 @@
         "name": "Jasmine Current File",
         "program": "${workspaceFolder}/node_modules/jasmine/bin/jasmine",
         "args": [
-          "${workspaceFolder}/out/spec/${fileBasenameNoExtension}.js"
+          "${workspaceFolder}/out/test/spec/${fileBasenameNoExtension}.js"
         ],
         "preLaunchTask": "npm: compile",     
         "outFiles": ["${workspaceFolder}/TSOutput/**/*.js"],
