--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "author": "majany",
   "license": "ISC",
   "dependencies": {
-    "nearley": "^2.18.0"
+    "nearley": "^2.20.1"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.10.2",
+    "@types/nearley": "^2.11.2",
+    "@types/node": "^12.20.36",
+    "jasmine": "^3.10.0",
     "nyc": "^14.1.1",
-    "ts-node": "^8.4.1",
-    "@types/jasmine": "^3.4.2",
-    "jasmine": "^3.5.0",
-    "@types/nearley": "^2.11.0",
-    "@types/node": "^12.7.5",
-    "typescript": "^3.6.3",
-    "tslint": "^5.20.0"
+    "ts-node": "^8.10.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.9.10"
   },
   "typings": "./out/src/index.d.ts",
   "repository": {
